<resources>
    <string name="app_name">Four solaire</string>
    <string name="config_label">Configuration</string>
    <string name="config_bt_not_enabled_btn">Continuer</string>
    <string name="config_bt_not_supported_btn">Quitter</string>
    <string name="config_bt_paired_devices_title">Dispositifs appareillés </string>
    <string name="config_bt_paired_devices_btn">Scanner</string>
    <string name="config_bt_permission_bt_connect_title">Permission nécessaire</string>
    <string name="config_bt_permission_bt_connect_text">Depuis Android 12 (API level 31), la permission `BLUETOOTH_CONNECT` est nécessaire pour se connecter aux appareils Bluetooth.</string>
    <string name="config_bt_not_allowed_info">TODO: Si la permission n\'est plus demandé réinstaller l\'app ou aller dans les règlages et activez manuellement la permission !</string>
    <string name="config_bt_not_allowed_btn">Autoriser</string>
    <string name="config_bt_connection_failure">Échec de la connexion</string>
    <string name="title_activity_bluetooth_control">BluetoothControlActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>

    <string name="dev_mode">Mode</string>
    <string name="dev_nl">NL</string>
    <string name="dev_cr"><strike>CR</strike></string>
    <string name="dev_terminal">Terminal</string>
    <string name="dev_terminal_msg_hint">Entrez la commande</string>
    <string name="dev_terminal_speakable">Envoyez</string>
    <string name="dev_terminal_clear">Vider</string>
    <string name="dev_terminal_settings_autoscroll">Auto-scroll</string>
    <string name="dev_monitor">Moniteur</string>

    <string name="dev_monitor_add_receiver_title">Création d\'un récepteur</string>
    <string name="dev_monitor_receiver_name">Nom</string>
    <string name="dev_monitor_receiver_unit">Unité</string>

    <string name="dev_receiver_creation_explanation_passive"><em>Mode passif :</em> Le récepteur attend les données envoyé par Arduino.</string>
    <string name="dev_receiver_creation_explanation_active"><em>Mode actif :</em></string>
    <string name="dev_receiver_creation_error">Il manque des informations. <cite>(Champs avec *)</cite></string>
    <string name="dev_mode_explication">
        <![CDATA[
        <em>En développement..</em>
        <ul>
            <li> Ajoute <b><cite>\\n</cite></b> à la fin des messages envoyés par le téléphone.</li>
            <li> Pour envoyer des données depuis Arduino, utilisez <b><em>println()</em></b> ou ajouter <b><cite>\\n</cite></b> à la fin de vos Strings pour signaler la fin de la commande.</li>
        </ul>
    ]]>
    </string>


    <string name="activity_bt_content_description">Android icone</string>
    <string name="activity_devices_content_description">Périphérique icone</string>

    <string name="main_bt_not_supported_title">Bluetooth non supporté</string>
    <string name="main_bt_not_supported_help">Votre appareil ne supporte pas le Bluetooth :(</string>
    <string name="main_bt_not_supported_button">Quitter</string>

    <string name="main_bt_not_enabled_title">Bluetooth non activé</string>
    <string name="main_bt_not_enabled_help">Pour utiliser l\'application, activez le Bluetooth. ;)</string>
    <string name="main_bt_not_enabled_button">C\'est bon !</string>
    <string name="main_bt_not_enabled_toast">Le Bluetooth n\'est toujours pas activité \!</string>

    <string name="main_bt_permissions_title">Activer les permissions</string>
    <string name="main_bt_permissions_help">Pour utiliser l\'application merci d\'activer les permissions ! hihihi</string>
    <string name="main_bt_permissions_button_p1">Activer</string>
    <string name="main_bt_permissions_button_p2">Valider</string>
    <string name="main_bt_permissions_toast">La permission n\'est toujours pas accordée !</string>

    <string name="main_bt_permissions_popup_title">Permission nécessaire</string>
    <string name="main_bt_permissions_popup_help">Depuis Android 12 (API level 31), la permission `BLUETOOTH_CONNECT` est nécessaire pour se connecter aux appareils Bluetooth.</string>
    <string name="main_bt_permissions_positive_button">OK</string>

    <string name="main_devices_title">Périphériques appareillés</string>
    <string name="main_devices_button">Rafraichir</string>
    <string name="main_devices_help">Aucun périphérique trouvé. N\'oubliez pas de l\'appareiller dans les paramètres Bluetooth !</string>

    <string name="popup_connecting_help">Connexion en cours…</string>
</resources>


