<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".dev.DeveloperBluetoothControlActivity">

<!-- MODE -->
    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dev_mode"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/switchModeNewLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:checked="true"
        android:clickable="false"
        android:text="@string/dev_nl"
        android:textColorHighlight="#BC6565"
        app:layout_constraintBottom_toBottomOf="@+id/textView4"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="@+id/textView4"
        app:splitTrack="false"
        tools:ignore="TouchTargetSizeCheck" />


    <Switch
        android:id="@+id/switchModeReturnCarriage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:checked="false"
        android:clickable="false"
        android:text="@string/dev_cr"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="@+id/switchModeNewLine"
        app:layout_constraintStart_toEndOf="@+id/switchModeNewLine"
        app:layout_constraintTop_toTopOf="@+id/switchModeNewLine"
        tools:ignore="TouchTargetSizeCheck" />

    <ImageView
        android:id="@+id/btnModeInfo"
        android:layout_width="26dp"
        android:layout_height="26dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="@+id/switchModeReturnCarriage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/switchModeReturnCarriage"
        app:srcCompat="@drawable/ic_action_info"
        app:tint="@color/main_color" />
<!-- MODE END-->

<!-- H SEPARATOR -->
    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />
<!-- H SEPARATOR END-->

<!-- TERMINAL -->
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/dev_terminal"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <Button
        android:id="@+id/btnTerminalClear"
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:layout_marginEnd="8dp"
        android:minWidth="0dp"
        android:text="@string/dev_terminal_clear"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintEnd_toStartOf="@+id/btnTerminalOptions"
        app:layout_constraintTop_toTopOf="@+id/textView2"
        tools:ignore="TouchTargetSizeCheck" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewTerminal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:paddingHorizontal="12dp"
        android:paddingVertical="6dp"
        app:layout_constraintBottom_toTopOf="@+id/editTxtTerminalMsg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/editTxtTerminalMsg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/dev_terminal_msg_hint"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/divider3"
        app:layout_constraintEnd_toStartOf="@+id/btnTerminalSend"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/btnTerminalOptions"
        android:layout_width="32dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/btnTerminalClear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnTerminalClear"
        app:srcCompat="@drawable/ic_action_settings"
        app:tint="@color/main_color" />

    <ImageView
        android:id="@+id/btnTerminalSend"
        android:layout_width="38dp"
        android:layout_height="38dp"
        app:layout_constraintBottom_toBottomOf="@+id/editTxtTerminalMsg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editTxtTerminalMsg"
        app:srcCompat="@drawable/ic_action_send"
        app:tint="@color/main_color" />
<!-- TERMINAL END -->

<!-- H SEPARATOR -->
    <View
        android:id="@+id/divider3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="8dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
<!-- H SEPARATOR END-->

<!-- MONITOR -->
    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/dev_monitor"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/recyclerViewMonitor"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/btnCreateReceiver"
        android:layout_width="26dp"
        android:layout_height="26dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView5"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_action_add"
        app:tint="@color/main_color" />

    <!-- MONITOR END -->

<!-- H SEPARATOR -->


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewMonitor"
        android:layout_width="0dp"
        android:layout_height="86dp"
        android:layout_marginBottom="12dp"
        android:scrollbars="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/divider4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/divider4"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="8dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
<!-- H SEPARATOR END-->


    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="Contrôle"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/recyclerViewControl"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewControl"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>