<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="16dp"
    android:paddingVertical="12dp"
    tools:context=".MainActivity">

    <!--  PAIRED DEVICES  -->
    <androidx.constraintlayout.widget.Group
        android:id="@+id/grpPairedDevices"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="txtPairedDevicesTitle, imgIconDevices, recycleViewPairedDevices" />

    <ImageView
        android:id="@+id/imgIconDevices"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_action_devices"
        app:tint="#2E2E2E"
        android:contentDescription="@string/activity_devices_content_description" />

    <TextView
        android:id="@+id/txtPairedDevicesTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/main_devices_title"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imgIconDevices"
        app:layout_constraintStart_toEndOf="@+id/imgIconDevices"
        app:layout_constraintTop_toTopOf="@+id/imgIconDevices" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycleViewPairedDevices"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toTopOf="@+id/btnConfiguration"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPairedDevicesTitle" />

    <TextView
        android:id="@+id/txtPairedDevicesVoid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="24dp"
        android:text="@string/main_devices_help"
        android:textAlignment="center"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/btnConfiguration"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPairedDevicesTitle"/>


    <!--  BLUETOOTH CONFIGURATION  -->
    <androidx.constraintlayout.widget.Group
        android:id="@+id/grpBluetoothConfiguration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="txtInfoBluetoothPermissions" />

    <ImageView
        android:id="@+id/imgAndroidBluetooth"
        android:layout_width="148dp"
        android:layout_height="148dp"
        android:layout_marginTop="64dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_action_android"
        app:tint="@color/main_color"
        android:contentDescription="@string/activity_bt_content_description" />

    <TextView
        android:id="@+id/txtInfoBluetoothPermissions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:textStyle="bold"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgAndroidBluetooth" />

    <!--  GLOBAL BUTTON  -->
    <Button
        android:id="@+id/btnConfiguration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="4dp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>